--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.7.0",
     "package.json": "^1.0.0",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "socket.io": "^1.4.5"
   },
   "scripts": {
